ingress/00-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: ealen/echo-server
          ports:
            - containerPort: 80
