ingress/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: apps
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
